--- a/.github/workflows/yaosiwang6712.yml
+++ b/.github/workflows/yaosiwang6712.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '20 2/6 * * *'
-jobs:
+jobs:  # 25730
   build:
     runs-on: ubuntu-latest
     steps:
